# BeeperPurge

./: .gitignore  CODEOWNERS  Dockerfile  README.md  pyproject.toml  run_linter.sh  setup.py
.github/workflows/: auto-tag.yaml  python-ci-main.yaml  python-ci.yaml  python-release.yaml  release.yaml  testpy
src/beeperpurge/: __init__.py  __version__.py  cleaner.py  logging.py
tests/: conftest.py  test_cleaner.py  test_larger_structure.py  test_logging.py  test_structure.py
